[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twins-anthropic"
version = "0.1.0"
description = "Anthropic Messages API digital twin for twins.la"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
    "twins-local>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "anthropic>=0.34",
]

[tool.setuptools.packages.find]
include = ["twins_anthropic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
